--- a/src/main/resources/com/lms/librarymanagementsystem/account.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/account.fxml
@@ -2,7 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,8 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="500.0" prefWidth="750.0" style="-fx-background-color: #011B3E;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.AccountController">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #011B3E;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.AccountController">
    <children>
       <Label alignment="CENTER" layoutY="23.0" prefHeight="35.0" prefWidth="750.0" text="Ditt lånekonto" textFill="#f0f0f0">
          <font>
@@ -94,7 +94,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="accounttypeLabel" prefWidth="135.0" text="Label" textFill="#f0f0f0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Label fx:id="usertypeLabel" prefWidth="135.0" text="Label" textFill="#f0f0f0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
                   <Font size="14.0" />
                </font>
@@ -116,19 +116,17 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <ListView fx:id="loanListView" layoutX="300.0" layoutY="86.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="returnLoanButton" layoutX="300.0" layoutY="325.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Returnera" textFill="#011b3e">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Button>
-      <Label layoutX="520.0" layoutY="67.0" prefWidth="200.0" text="Dina reservationer :" textFill="#f0f0f0">
+      <Label layoutX="570.0" layoutY="67.0" prefWidth="200.0" text="Dina reservationer :" textFill="#f0f0f0">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <ListView fx:id="reservationListView" layoutX="520.0" layoutY="86.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="endReservationButton" layoutX="520.0" layoutY="325.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Säg upp" textFill="#011b3e">
+      <Button fx:id="endReservationButton" layoutX="570.0" layoutY="325.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Säg upp" textFill="#011b3e">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
@@ -143,10 +141,25 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="returnButton" layoutX="536.0" layoutY="451.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Tillbaka" textFill="#011b3e">
+      <Button fx:id="returnButton" layoutX="570.0" layoutY="450.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Tillbaka" textFill="#011b3e">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Button>
+      <TableView fx:id="loanTableView" layoutX="300.0" layoutY="85.0" prefHeight="200.0" prefWidth="250.0">
+        <columns>
+          <TableColumn fx:id="loanMediaIdColumn" maxWidth="150.0" minWidth="20.0" prefWidth="56.0" text="Media ID" />
+          <TableColumn fx:id="loanTitleColumn" maxWidth="150.0" minWidth="20.0" prefWidth="75.0" text="Titel" />
+            <TableColumn fx:id="loanLoanIdColumn" maxWidth="150.0" minWidth="20.0" prefWidth="43.0" text="Lån ID" />
+            <TableColumn fx:id="loanReturndateColumn" minWidth="20.0" prefWidth="75.0" text="Returdatum" />
+        </columns>
+      </TableView>
+      <TableView fx:id="reservationTableView" layoutX="570.0" layoutY="85.0" prefHeight="200.0" prefWidth="200.0">
+         <columns>
+            <TableColumn fx:id="resMediaIdColumn" maxWidth="150.0" minWidth="20.0" prefWidth="56.0" text="Media ID" />
+            <TableColumn fx:id="resTitleColumn" maxWidth="150.0" minWidth="20.0" prefWidth="100.0" text="Titel" />
+            <TableColumn fx:id="resQueueColumn" maxWidth="150.0" minWidth="20.0" prefWidth="43.0" text="Könr" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
