--- a/src/main/resources/com/lms/librarymanagementsystem/account.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/account.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #011B3E;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.AccountController">
+<AnchorPane prefHeight="500.0" prefWidth="850.0" style="-fx-background-color: #011B3E;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.AccountController">
    <children>
       <Label alignment="CENTER" layoutY="23.0" prefHeight="35.0" prefWidth="750.0" text="Ditt lånekonto" textFill="#f0f0f0">
          <font>
@@ -69,7 +69,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label prefWidth="135.0" text="Tillåtna reservationer :" textFill="#f0f0f0" GridPane.rowIndex="6">
+            <Label prefWidth="135.0" text="Återstående lån :" textFill="#f0f0f0" GridPane.rowIndex="6">
                <font>
                   <Font size="14.0" />
                </font>
@@ -104,7 +104,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="maxReservationLabel" prefWidth="135.0" text="Label" textFill="#f0f0f0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <Label fx:id="remainingLoanLabel" prefWidth="135.0" text="Label" textFill="#f0f0f0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <font>
                   <Font size="14.0" />
                </font>
@@ -116,7 +116,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="returnLoanButton" layoutX="300.0" layoutY="325.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Returnera" textFill="#011b3e">
+      <Button fx:id="returnLoanButton" layoutX="300.0" layoutY="325.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="250.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Returnera" textFill="#011b3e">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
@@ -126,7 +126,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="endReservationButton" layoutX="570.0" layoutY="325.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Säg upp" textFill="#011b3e">
+      <Button fx:id="endReservationButton" layoutX="570.0" layoutY="325.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="250.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Säg upp" textFill="#011b3e">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
@@ -141,24 +141,25 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="returnButton" layoutX="570.0" layoutY="450.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Tillbaka" textFill="#011b3e">
+      <Button fx:id="returnButton" layoutX="570.0" layoutY="450.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="250.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Tillbaka" textFill="#011b3e">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Button>
       <TableView fx:id="loanTableView" layoutX="300.0" layoutY="85.0" prefHeight="200.0" prefWidth="250.0">
         <columns>
-          <TableColumn fx:id="loanMediaIdColumn" maxWidth="150.0" minWidth="20.0" prefWidth="56.0" text="Media ID" />
+          <TableColumn fx:id="loanMediaIdColumn" maxWidth="56.0" minWidth="20.0" prefWidth="56.0" text="Media ID" />
           <TableColumn fx:id="loanTitleColumn" maxWidth="150.0" minWidth="20.0" prefWidth="75.0" text="Titel" />
-            <TableColumn fx:id="loanLoanIdColumn" maxWidth="150.0" minWidth="20.0" prefWidth="43.0" text="Lån ID" />
-            <TableColumn fx:id="loanReturndateColumn" minWidth="20.0" prefWidth="75.0" text="Returdatum" />
+            <TableColumn fx:id="loanLoanIdColumn" maxWidth="50.0" minWidth="20.0" prefWidth="44.0" text="Lån ID" />
+            <TableColumn fx:id="loanReturndateColumn" maxWidth="100.0" minWidth="20.0" prefWidth="75.0" text="Returdatum" />
         </columns>
       </TableView>
-      <TableView fx:id="reservationTableView" layoutX="570.0" layoutY="85.0" prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="reservationTableView" layoutX="570.0" layoutY="85.0" prefHeight="200.0" prefWidth="250.0">
          <columns>
-            <TableColumn fx:id="resMediaIdColumn" maxWidth="150.0" minWidth="20.0" prefWidth="56.0" text="Media ID" />
+            <TableColumn fx:id="resMediaIdColumn" maxWidth="56.0" minWidth="20.0" prefWidth="56.0" text="Media ID" />
             <TableColumn fx:id="resTitleColumn" maxWidth="150.0" minWidth="20.0" prefWidth="100.0" text="Titel" />
-            <TableColumn fx:id="resQueueColumn" maxWidth="150.0" minWidth="20.0" prefWidth="43.0" text="Könr" />
+            <TableColumn fx:id="resResidColumn" maxWidth="50.0" prefWidth="50.0" text="Res. ID" />
+            <TableColumn fx:id="resQueueColumn" maxWidth="44.0" minWidth="20.0" prefWidth="44.0" text="Könr" />
          </columns>
       </TableView>
    </children>
