TODO update all finally blocks in controller classes to call extracted method TODO Email reminder function for overdue loans - method created in DBUtils -> checkOverdue()
Added email to user database
Updated UserModel, SignUpController, DBUtils, AccountController and LoanController to handle email attribute

--- a/src/main/resources/com/lms/librarymanagementsystem/account.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/account.fxml
@@ -37,6 +37,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label prefWidth="135.0" text="AnvändarID :" textFill="#f0f0f0">
@@ -64,12 +65,12 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label prefWidth="135.0" text="Tillåtna lån :" textFill="#f0f0f0" GridPane.rowIndex="5">
+            <Label prefWidth="135.0" text="Tillåtna lån :" textFill="#f0f0f0" GridPane.rowIndex="6">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label prefWidth="135.0" text="Återstående lån :" textFill="#f0f0f0" GridPane.rowIndex="6">
+            <Label prefWidth="135.0" text="Återstående lån :" textFill="#f0f0f0" GridPane.rowIndex="7">
                <font>
                   <Font size="14.0" />
                </font>
@@ -99,12 +100,22 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="maxLoanLabel" prefWidth="135.0" text="Label" textFill="#f0f0f0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <Label fx:id="maxLoanLabel" prefWidth="135.0" text="Label" textFill="#f0f0f0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="remainingLoanLabel" prefWidth="135.0" text="Label" textFill="#f0f0f0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <Label fx:id="remainingLoanLabel" prefWidth="135.0" text="Label" textFill="#f0f0f0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label prefWidth="135.0" text="Email :" textFill="#f0f0f0" GridPane.rowIndex="5">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="emailLabel" prefWidth="135.0" text="Label" textFill="#f0f0f0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font size="14.0" />
                </font>
