TODO Database setup: - add all scripts to dbscripts.txt - Gustav
TODO Bug fixes:
- fix reservation bug in DBUtils.addLoan() and DBUtils.checkQueue() - Gustav

TODO Function checks:
- check that all dates are set as intended, i.e., 28 days, 14 days, 7 days according to format, i.e., bok, kurslitteratur, film - in that order
- check that receipts print for new loans
- check that referens and utlånad media can't be loaned
- check that loans can be returned through account view
- check that reservations can be ended through account view

- check that utlånad and ledig media can be reserved

- check that new users can be registered

- check that search is available to non logged in users
- check that admin user can access all functions
- check that bibliotekarie user can access all functions

- check that inventory view is only accessible by admin and bibliotekare users
- check that overdue items are visible in inventory view

- check that reminder emails are sent

TODO Documentation:
- class diagram from IntelliJ
- dbscripts.txt
- .jar dependencies, i.e., mysql-connector and javax-mail
- dependencies.txt

--- a/src/main/resources/com/lms/librarymanagementsystem/account.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/account.fxml
@@ -24,7 +24,7 @@
             <Image url="@media/ltu_logga.jpg" />
          </image>
       </ImageView>
-      <GridPane layoutX="14.0" layoutY="86.0" prefWidth="395.0">
+      <GridPane layoutX="14.0" layoutY="86.0" prefWidth="360.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="114.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="281.0" minWidth="10.0" prefWidth="281.0" />
@@ -122,7 +122,7 @@
             </Label>
          </children>
       </GridPane>
-      <Label layoutX="415.0" layoutY="67.0" prefWidth="200.0" text="Dina lån :" textFill="#f0f0f0">
+      <Label layoutX="385.0" layoutY="67.0" prefWidth="200.0" text="Dina lån :" textFill="#f0f0f0">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -157,8 +157,9 @@
             <Font name="System Bold" size="16.0" />
          </font>
       </Button>
-      <TableView fx:id="loanTableView" layoutX="415.0" layoutY="85.0" prefHeight="200.0" prefWidth="300.0">
+      <TableView fx:id="loanTableView" layoutX="385.0" layoutY="85.0" prefHeight="200.0" prefWidth="337.0">
         <columns>
+            <TableColumn fx:id="loanLoanidColumn" maxWidth="50.0" minWidth="15.0" prefWidth="37.0" text="LånID" />
           <TableColumn fx:id="loanMediaIdColumn" maxWidth="56.0" minWidth="20.0" prefWidth="56.0" text="Media ID" />
           <TableColumn fx:id="loanTitleColumn" maxWidth="150.0" minWidth="20.0" prefWidth="90.0" text="Titel" />
             <TableColumn fx:id="loanLoanDateColumn" maxWidth="83.0" minWidth="20.0" prefWidth="72.0" text="Låndatum" />
