TODO Database setup: - add all scripts to dbscripts.txt - DONE
TODO Bug fixes:
- fix reservation bug in DBUtils.addLoan() and DBUtils.checkQueue() - DONE

TODO Function checks:
- check that all dates are set as intended, i.e., 28 days, 14 days, 7 days according to format, i.e., bok, kurslitteratur, film - in that order - DONE
- check that receipts print for new loans - DONE
- check that referens and utlånad media can't be loaned - DONE
- check that loans can be returned through account view - DONE
- check that reservations can be ended through account view - DONE

- check that utlånad and ledig media can be reserved - DONE

- check that new users can be registered - DONE

- check that search is available to non logged in users - DONE
- check that admin user can access all functions - DONE
- check that bibliotekarie user can access all functions - DONE

- check that inventory view is only accessible by admin and bibliotekarie users - DONE
- check that overdue items are visible in inventory view - DONE

- check that reminder emails are sent - DONE

TODO Documentation:
- class diagram from IntelliJ - DONE
- dbscripts.txt  - DONE
- .jar dependencies, i.e., mysql-connector and javax-mail
- dependencies.txt

--- a/src/main/resources/com/lms/librarymanagementsystem/loan.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/loan.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<!--suppress ALL -->
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" style="-fx-background-color: #011B3E;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.LoanController">
    <children>
       <TableView fx:id="searchTableView" layoutX="25.0" layoutY="100.0" prefHeight="400.0" prefWidth="1450.0" style="-fx-cursor: hand;">
