--- a/src/main/resources/com/lms/librarymanagementsystem/account.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/account.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
+<!--suppress ALL -->
 <AnchorPane prefHeight="500.0" prefWidth="850.0" style="-fx-background-color: #011B3E;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.AccountController">
    <children>
       <Label alignment="CENTER" layoutY="23.0" prefHeight="35.0" prefWidth="1000.0" text="Ditt lånekonto" textFill="#f0f0f0">
