--- a/src/main/resources/com/lms/librarymanagementsystem/inventory.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/inventory.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<!--suppress ALL -->
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.InventoryController">
    <children>
       <AnchorPane prefHeight="500.0" prefWidth="1500.0" style="-fx-background-color: #011b3e;">
